--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "animate.css": "^4.1.1",
     "next": "14.0.4",
     "react": "^18",
