--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactjs-popup": "^2.0.6"
   }
 }
